--- a/_config.yml
+++ b/_config.yml
@@ -58,5 +58,5 @@ miscellaneous:
         twitter_id:
         google_plus:
     links:
-        Kaito's nest: http://steamcommunity.com/id/yuukikaito
-        Fuuka's nest: http://steamcommunity.com/id/fuuka_adachi
+        Kaito Yuuki's Github profile: https://github.com/minhnh94
+        Fuuka Adachi's Github profile: https://github.com/fuuka1994
