--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 menu:
     Home: /
     # Delete this row if you don't want categories in your header nav bar
-    Categories: Lifestyle, Technologies, Entertainment
+    Categories:
     About: /about.html
 
 # Customize
