edit category, tag name

--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ tag:
         software-development: software development
         development-experience: development experience
         trivia: trivia
+        website: website
     vi:
         tan-man: tản mạn
     ja:
