--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ tag:
         development-experience: development experience
         trivia: trivia
         website: website
+        hosting: hosting
     vi:
         tan-man: tản mạn
     ja:
