--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ tag:
         hosting: hosting
     vi:
         tan-man: tản mạn
+        website: website
+        hosting: hosting
     ja:
         zatsudan: 雑談
 
@@ -50,7 +52,7 @@ widgets:
 
 # Search
 search:
-    insight: true # you need to install `hexo-generator-json-content` before using Insight Search
+    insight: # you need to install `hexo-generator-json-content` before using Insight Search
     swiftype: # enter swiftype install key here
     baidu: false # you need to disable other search engines to use Baidu search, options: true, false
 
