change fb share open graph

--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ plugins:
 # Miscellaneous
 miscellaneous:
     open_graph: # see http://ogp.me
-        fb_app_id:
+        fb_app_id: 153050218821313
         fb_admins:
         twitter_id:
         google_plus:
