--- a/_config.yml
+++ b/_config.yml
@@ -20,10 +20,13 @@ menu:
 tag:
     en:
         software-development: software development
-        development-experience: development experience
+        experience: experience
         trivia: trivia
+        lifestyle: lifestyle
         website: website
         hosting: hosting
+        stock: stock
+        two-cents: two-cents
     vi:
         tan-man: tản mạn
         website: website
