--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,11 @@ tag:
         two-cents: two cents
         mental: mental
 #        travel: travel
-#        japan: japan
+        japan: japan
+        tokyo: tokyo
+        food: food
+        ramen: ramen
+        food-series: food series
 #        nature: nature
 #        park: park
     vi:
