change navigation bar titles, etc

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ menu:
             jinsei-seikatsu: 人生・生活
             gijutsu: 技術
             ryoko: 旅行
-    About: /about.html
+    Contact-us: /contact-us.html
 
 tag:
     en:
