--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ menu:
 tag:
     en:
         software-development: software development
+        programming: programming
+        mysql: mysql
         experience: experience
         software: software
         jetbrains: jetbrains
