--- a/_config.yml
+++ b/_config.yml
@@ -44,6 +44,9 @@ tag:
         tan-man: tản mạn
         website: website
         hosting: hosting
+        blogging: blogging
+        kinh-nghiem: kinh nghiệm
+        cong-nghe: công nghệ
     ja:
         zatsudan: 雑談
         kabu: 株
