--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ tag:
         food-series: food series
 #        nature: nature
 #        park: park
+        self-help: self help
     vi:
         tan-man: tản mạn
         website: website
