disable some anti adblock code

--- a/_config.yml
+++ b/_config.yml
@@ -47,6 +47,7 @@ tag:
     trivia: trivia
     two-cents: two cents
     blogging: blogging
+    make-money-online: make money online
   vi:
     tan-man: tản mạn
     website: website
