Revert "remove jetbrain tag"
This reverts commit 4046e98c93d255775b382f910f3674dfbc442e62.

--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ tag:
     software-development: software development
     programming: programming
     mysql: mysql
+    jetbrains: jetbrains
     website: website
     hosting: hosting
     php: php
